Solution generator much improved.
Run with seed and an arbitrary second argument for solutions.
If a third argument is given, the problem instance will be printed
before the solutions.